--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+.pnp
+.pnp.js
 
 # Environment variables
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE / Editors
 .idea/
@@ -21,6 +26,8 @@ yarn-error.log
 dist/
 build/
 coverage/
+dist-ssr
+*.local
 
 # Logs
 logs
@@ -28,6 +35,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Runtime data
 pids
