--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
         "build": "vite build",
         "preview": "vite preview",
         "lint": "eslint . --ext js --fix",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose",
+        "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch --verbose"
     },
     "dependencies": {
-        "qrcode": "^1.5.3",
-        "file-saver": "^2.0.5"
+        "file-saver": "^2.0.5",
+        "qrcode": "^1.5.3"
     },
     "devDependencies": {
+        "@babel/core": "^7.26.10",
+        "@babel/preset-env": "^7.26.9",
         "@vitejs/plugin-legacy": "^5.0.4",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
+        "jest": "^29.7.0",
         "prettier": "^3.2.5",
         "vite": "^5.1.3"
     },
@@ -26,5 +32,21 @@
         "node": ">=18.0.0",
         "yarn": ">=1.22.0"
     },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+    "jest": {
+        "testEnvironment": "node",
+        "verbose": true,
+        "testMatch": [
+            "**/test/**/*.test.js"
+        ],
+        "collectCoverage": true,
+        "coverageReporters": [
+            "text",
+            "html"
+        ],
+        "coverageDirectory": "coverage",
+        "transform": {
+            "^.+\\.js$": "babel-jest"
+        }
+    }
 }
