--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
         "preview": "vite preview",
         "lint": "eslint . --ext js --fix",
         "format": "prettier --write .",
-        "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --verbose",
+        "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --verbose test/static-url-validation.test.js test/enhanced-url-validation.test.js",
         "test:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --watch --verbose"
     },
     "dependencies": {
         "file-saver": "^2.0.5",
-        "qrcode": "^1.5.3"
+        "qrcode": "^1.5.3",
+        "validator": "^13.15.0"
     },
     "devDependencies": {
         "@babel/core": "^7.26.10",
