--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
+        "terser": "^5.39.0",
         "vite": "^5.1.3"
     },
     "engines": {
