--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
         "preview": "vite preview",
         "lint": "eslint . --ext js --fix",
         "format": "prettier --write .",
-        "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --verbose test/static-url-validation.test.js test/enhanced-url-validation.test.js",
-        "test:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --watch --verbose"
+        "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' yarn jest --verbose test/static-url-validation.test.js test/enhanced-url-validation.test.js",
+        "test:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' yarn jest --watch --verbose"
     },
     "dependencies": {
         "file-saver": "^2.0.5",
-        "qrcode": "^1.5.3",
+        "qrcode": "^1.5.4",
         "validator": "^13.15.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.10",
-        "@babel/preset-env": "^7.26.9",
-        "@vitejs/plugin-legacy": "^5.0.4",
+        "@babel/core": "^7.24.4",
+        "@babel/preset-env": "^7.24.4",
+        "@vitejs/plugin-legacy": "^6.0.2",
         "babel-jest": "^29.7.0",
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
         "terser": "^5.39.0",
-        "vite": "^5.1.3"
+        "vite": "^6.0.0"
     },
     "engines": {
         "node": ">=18.0.0",
